--- a/css/style.css
+++ b/css/style.css
@@ -150,7 +150,7 @@ header {
 
 /*-- banner --*/
 .banner{
-	background:url(../images/bkdg000.jpg) no-repeat 0px 0px;
+	background:url(../images/eIabcZbkd.jpg) no-repeat 0px 0px;
 	background-size:cover;
 	-webkit-background-size:cover;
 	-moz-background-size:cover;
