--- a/css/style.css
+++ b/css/style.css
@@ -177,7 +177,7 @@ header {
 .agile_banner_info h2 {
     font-size: 45px;
     color: #fff;
-    text-transform: uppercase;
+    text-transform: none;
     font-weight: 700;
     letter-spacing: 3px;
      text-shadow: 0 2px 2px rgba(0, 0, 0, 0.2);
